Bug 1722582 - Ensure downloads progress bar's border is visible. r=dao
This looks fine on Windows and macOS as well, afaict, and fixes the bug.

Differential Revision: https://phabricator.services.mozilla.com/D123538

UltraBlame original commit: 62b215b764de33754b156d92e72b8148d9c35ed0

--- a/browser/themes/shared/downloads/progressmeter.inc.css
+++ b/browser/themes/shared/downloads/progressmeter.inc.css
@@ -248,38 +248,6 @@ GrayText
 .
 downloadProgress
 :
-not
-(
-[
-value
-=
-"
-0
-"
-]
-)
-:
-:
--
-moz
--
-progress
--
-bar
-{
-margin
-:
--
-1px
-;
-height
-:
-8px
-;
-}
-.
-downloadProgress
-:
 indeterminate
 :
 :
